--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/seedrandom": "^3.0.1",
     "axios": "^0.24.0",
     "hangul-js": "^0.2.6",
     "next": "12.0.8",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
